<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/label_command"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_response" />
    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:focusable="false"
        android:inputType="textMultiLine"
        android:singleLine="false" >

    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal" >

        <Button
            android:id="@+id/ButtonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send" />
        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/button_clear" />

        <Button
            android:id="@+id/buttonConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_configure" />

        <Button
            android:id="@+id/buttonDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_device" />

    </LinearLayout>

</LinearLayout>